--- a/app/src/main/res/layout/fragment_webpage_detail.xml
+++ b/app/src/main/res/layout/fragment_webpage_detail.xml
@@ -1,9 +1,6 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:id="@+id/webpage_detail"
-          style="?android:attr/textAppearanceLarge"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:padding="16dp"
-          android:textIsSelectable="true"
-          tools:context=".WebpageDetailFragment"/>
+<?xml version = "1.0" encoding="utf-8"?>
+<WebView android:id="@+id/detail_area"
+         xmlns:android="http://schemas.android.com/apk/res/android"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+    />
